# social_media_analyzer_data

./: .gitignore  AWS_LAMBDA_README.md  DEPLOYMENT_GUIDE.md  cookies.txt  deploy_lambda.sh  deploy_lambda_optimized.sh  deploy_lambda_simple.sh  lambda_permissions_policy.json  lambda_requirements.txt  layer_requirements.txt  minimal_requirements.txt  process_tiktok_data.ipynb  pyproject.toml  requirements.txt  setup_aws_resources.sh  tiktok_data_collect.py
cookies/: cookies0.txt  cookies1.txt  cookies2.txt  cookies3.txt
src/: process_tiktok_data.ipynb  tiktok_data_collect.py  tiktok_data_collect_s3.py  tiktok_data_collect_s3_optimized.py
tiktok_data/: beauty_tiktok_2025-04-28.parquet  tiktok_beauty_dataset.parquet
